--- a/SpringChickens/appsettings.json
+++ b/SpringChickens/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryPort": "587",
+    "SecondayDomain": "smtp.live.com",
+    "SecondaryPort": "587",
+    "UsernameEmail": "SpringChickensWebsite@gmail.com",
+    "UsernamePassword": "SuperSecurePassword123",
+    "FromEmail": "SpringChickensWebsite@gmail.com"
+  }
 }
