Progressed on carousel, got a weird table thing for the management item partial

--- a/SpringChickens/SpringChickens.csproj
+++ b/SpringChickens/SpringChickens.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\Partials\" />
+  </ItemGroup>
+
 </Project>
