Uses appsettings.json now

--- a/SpringChickens/appsettings.json
+++ b/SpringChickens/appsettings.json
@@ -10,11 +10,10 @@
 
   "EmailSettings": {
     "PrimaryDomain": "smtp.gmail.com",
-    "PrimaryPort": "587",
-    "SecondayDomain": "smtp.live.com",
-    "SecondaryPort": "587",
-    "UsernameEmail": "SpringChickensWebsite@gmail.com",
-    "UsernamePassword": "SuperSecurePassword123",
-    "FromEmail": "SpringChickensWebsite@gmail.com"
-  }
+    "Password": "SuperSecurePassword123",
+    "FromEmail": "springchickenswebsite@gmail.com",
+    "SpringChickensUrl": "https://localhost:44335"
+  },
+
+  "DefaultConnection": "Data Source=SQL6009.site4now.net;Initial Catalog=DB_A54212_SpringChickens;User Id=DB_A54212_SpringChickens_admin;Password=BAE12345;"
 }
