Fixed stupid bugs

--- a/SpringChickens/appsettings.json
+++ b/SpringChickens/appsettings.json
@@ -9,10 +9,12 @@
   "AllowedHosts": "*",
 
   "EmailSettings": {
-    "PrimaryDomain": "smtp.gmail.com",
-    "Password": "SuperSecurePassword123",
-    "FromEmail": "springchickenswebsite@gmail.com",
-    "SpringChickensUrl": "https://localhost:44335"
+    "PrimaryDomain": "mail.thespringchickens.uk",
+    "Password": "Services234$",
+    "FromEmail": "services@thespringchickens.uk",
+    "SpringChickensUrl": "thespringchickens.uk",
+    "EnableSsl": "false",
+    "Port": "25"
   },
 
   "DefaultConnection": "Data Source=SQL6009.site4now.net;Initial Catalog=DB_A54212_SpringChickens;User Id=DB_A54212_SpringChickens_admin;Password=BAE12345;"
