--- a/SpringChickens/SpringChickens.csproj
+++ b/SpringChickens/SpringChickens.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -23,5 +23,11 @@
     <ProjectReference Include="..\Database\Database.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <TrimmerRootAssembly Include="System.Net.Mail" />
+  </ItemGroup>
+
+ 
 
 </Project>
