Fixed some bugs, finished first draft

--- a/SpringChickens/appsettings.json
+++ b/SpringChickens/appsettings.json
@@ -14,7 +14,8 @@
     "FromEmail": "services@thespringchickens.uk",
     "SpringChickensUrl": "thespringchickens.uk",
     "EnableSsl": "false",
-    "Port": "25"
+    "Port": "25",
+    "ContactEmail" :  "springchickenswebsite@gmail.com"
   },
 
   "DefaultConnection": "Data Source=SQL6009.site4now.net;Initial Catalog=DB_A54212_SpringChickens;User Id=DB_A54212_SpringChickens_admin;Password=BAE12345;"
